[build-system]
requires = [
    "setuptools >= 40.0.4",
    "setuptools_scm >= 2.0.0, <4",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'
[tool.black]
line-length=88
fast=true
target-version=["py35", "py36", "py37", "py38"]
[tool.isort]
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
combine_as_imports=true
line_length=88
ensure_newline_before_comments=true
[pytest]
python_files = 'test_*.py'
